# FloodFieldCalculator

./: .clang-tidy  .gitignore  CMakeLists.txt  FloodFieldCalculatorConfig.cmake.in  LICENSE.md  README.md  conandata.yml  config.toml
include/: calculator.h  config.h  config.h~  config_parser.h  flood_field_calculator.h  frame.h  measures.h  opencv_handler.h  spectrum_handler.h
include/collimator/: asymmetrical_vertical_gap_collimator_left.h  asymmetrical_vertical_gap_collimator_right.h  collimator.h  horizontal_gap_collimator.h  vertical_gap_collimator.h
include/core/calculator/: attenuation_calculator.h  calculator.h  distance_calculator.h  material_distance_calculator.h
include/core/collimator/: collimator.h  collimator.h~  horizontal_left_collimator.h  horizontal_right_collimator.h  horizontal_symmetrical_collimator.h  vertical_left_collimator.h  vertical_right_collimator.h  vertical_symmetrical_collimator.h
include/core/detector/: curved_detector.h  detector.h  flat_detector.h
include/core/filter/: bowtie_cylindrical_filter.h  bowtie_gauss_filter.h  bowtie_parabolic_filter.h  dist_filter.h  filter.h  slab_filter.h
include/core/postprocessing/: basic_postprocessor.h  postprocessor.h
include/detector/: curved_detector.h  detector.h  flat_detector.h
include/filter/: curved_filter.h  cylindrical_filter.h  filter.h  gauss_filter.h  slab_filter.h
include/geometry/: intersectable.h  plane.h  point.h  ray.h
include/image/: image_handler.h
include/image/dicom/: dicom_float32_handler.h  dicom_float64_handler.h  dicom_handler.h  dicom_uint16_handler.h  dicom_uint8_handler.h
include/image/tiff/: tiff_float32_handler.h  tiff_handler.h  tiff_uint16_handler.h  tiff_uint8_handler.h
include/io/: dicom.h  fs.h
include/signal/: attenuation.h  signal.h
include/spectrum/: material.h  spectrum.h
libs/vincentlaucsb/: csv.hpp
src/: calculator.cpp  config.cpp  config_parser.cpp  flood_field_calculator.cpp  frame.cpp  main.cpp  measures.cpp  opencv_handler.cpp  spectrum_handler.cpp
src/collimator/: asymmetrical_vertical_gap_collimator_left.cpp  asymmetrical_vertical_gap_collimator_right.cpp  collimator.cpp  horizontal_gap_collimator.cpp  vertical_gap_collimator.cpp
src/core/calculator/: attenuation_calculator.cpp  calculator.cpp  distance_calculator.cpp  material_distance_calculator.cpp
src/core/collimator/: collimator.cpp  horizontal_bottom_collimator.cpp  horizontal_symmetrical_collimator.cpp  horizontal_top_collimator.cpp  vertical_left_collimator.cpp  vertical_right_collimator.cpp  vertical_symmetrical_collimator.cpp
src/core/detector/: curved_detector.cpp  detector.cpp  flat_detector.cpp
src/core/filter/: bowtie_cylindrical_filter.cpp  bowtie_gauss_filter.cpp  bowtie_parabolic_filter.cpp  dist_filter.cpp  filter.cpp  slab_filter.cpp
src/core/postprocessing/: basic_postprocessor.cpp
src/detector/: curved_detector.cpp  detector.cpp  flat_detector.cpp
src/filter/: curved_filter.cpp  cylindrical_filter.cpp  filter.cpp  gauss_filter.cpp  slab_filter.cpp
src/geometry/: intersectable.cpp  point.cpp  ray.cpp
src/image/: image_handler.cpp
src/image/dicom/: dicom_float32_handler.cpp  dicom_float64_handler.cpp  dicom_handler.cpp  dicom_uint16_handler.cpp  dicom_uint8_handler.cpp
src/image/tiff/: tiff_float32_handler.cpp  tiff_handler.cpp  tiff_uint16_handler.cpp  tiff_uint8_handler.cpp
src/io/: dicom.cpp  fs.cpp
src/signal/: attenuation.cpp  signal.cpp
src/spectrum/: spectrum.cpp
